fix: align EngineeredPrecision container breakpoint from 960px to 1024px
Matches all other component containers across the site.

--- a/website/src/components/EngineeredPrecision/EngineeredPrecision.module.scss
+++ b/website/src/components/EngineeredPrecision/EngineeredPrecision.module.scss
@@ -92,7 +92,7 @@
     max-width: 720px;
   }
 
-  @media (min-width: 960px) {
+  @media (min-width: 1024px) {
     justify-content: flex-end;
     max-width: 960px;
   }
